--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <!-- <section class="preloader">
+        <div class="loader"></div>
+        <div class="count"></div>
+    </section> -->
+
     <div class="home" id="home">
         <div class="container">
             <div class="header">
@@ -24,11 +29,11 @@
                             <li><a class="nav__link" href="#home">Home</a></li>
                             <li><a class="nav__link" href="#about">About</a></li>
                             <li><a class="nav__link" href="#statistics">Statistics</a></li>
+                            <li><a class="nav__link" href="#portfolio">Portfolio</a></li>  
                             <li><a class="nav__link" href="#experience">Experience</a></li>
                             <li><a class="nav__link" href="#contact">Contact</a></li>
                             <li><a class="nav__link" href="#services">Services</a></li>   
                         </div>
-                        
                     </div>
                     <a class="btn" href="###">Contact me</a>
                 </div>
